v0.3.0/README.md
# DSH Routing Suite for Pi

Model-agnostic, per-prompt workflow routing for [Pi Agent](https://github.com/earendil-works/pi).

This repository contains:

- `packages/core` — `dsh-routing-core`, an independent npm package with pure routing logic.
- `packages/pi-extension` — `dsh-routing-pi`, a Pi extension that injects the routing guidance.

## Status

Version 0.3.0 implemented, compiled, and Pi live stress passed with DeepSeek V4 Flash.

Memory design: `docs/v0.3-memory-design.md` and `PLAN.md`.

## Commands

```bash
npm install
npm run build
npm test
```

## Use with Pi

```bash
pi -e ./packages/pi-extension/src/extension.ts
# or after build:
pi -e ./packages/pi-extension/dist/extension.js
```

In Pi:

- `/dsh-plan` toggles the built-in DSH plan mode.
- `/dsh-status` shows the current routing state.
- `/dsh-route <plan|inspect|fix|build|adaptive|weak|auto>` sets/clears a route override.
- `--dsh-two-phase` enables the optional two-phase tool surface.
- `--dsh-memory` enables session memory and context re-injection.
- If another Pi plan-mode extension is active (write/edit tools removed), routing automatically forces `plan`.

> Note: if you copy the extension file directly into `~/.pi/agent/extensions/`, make sure `dsh-routing-core` is resolvable (e.g. install the Pi package with `pi install ./packages/pi-extension` or run `npm install` in the copied extension directory).
